# NanoKVM_Testing_V2

./: .gitignore  README.md  Serial.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
NanoKVM_Pro_Testing/: config  remove_file.txt
NanoKVM_Pro_Testing/debs/: pikvm_1.2.12_arm64.deb  pikvm_1.2.7_arm64.deb  pikvm_1.2.9_arm64.deb
NanoKVM_Pro_Testing/factory_test/: app_stage_1.sh  app_stage_2.sh  run_all_tests.sh  stage_1_firmware.sh  stage_2_system_test.sh
NanoKVM_Pro_Testing/firmware/: AX630C_emmc_arm64_k419_sipeed_nanokvm_signed.dtb  AX630C_emmc_arm64_k419_sipeed_nanokvm_signed_20251224.dtb  kvm_spi_ui_test  kvm_ui_test  kvm_vin_test  nanokvm_update_6911  nanokvm_update_86102
bak/: TestButton.tsx  TestPanel.tsx  index copy.css  package.json
doc/: Debug.md  SecondTest.md  Serial.md  Server.md  State.md  Step.md  Testing.md  ToDoList.md  UpdateLists_V2.2.md  front_end.md  inpackage.md  serial.md  terminal.md  terminal_x16.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test_task.rs
src-tauri/src/function/: camera.rs  dialog_test.rs  hdmi.rs  mod.rs  printer.rs  serial.rs  server.rs  ssh.rs  update_state.rs  upload.rs  wifi_ap.rs
src-tauri/src/second_app/: app.rs  mod.rs  setup.rs  state.rs
src-tauri/src/test_app/: app.rs  mod.rs  setup.rs  step2.rs
src-tauri/src/threads/: app.rs  camera.rs  camera.rs.txt  dialog_test.rs  hdmi.rs  mod.rs  printer.rs  save.rs  serial.rs  serial_old.rs.txt  server.rs  setup.rs  ssh.rs  state.rs  static_eth.rs  step2.rs  test_task.rs  timer.rs.txt  update_state.rs  upload.rs  wifi_ap.rs
src/pages/: TestPage.tsx  (+2 more)
(+31 files in other folders)
