[package]
name = "nanokvm_testing_v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nanokvm_testing_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.8.1"
tokio = { version = "1", features = ["full", "net", "time"] }
futures = "0.3"
tokio-serial = "5.4.4"
nokhwa = { version = "0.10", features = ["input-v4l", "input-msmf", "input-avfoundation"] }
image = "0.24" 
qrcode = "0.13"
lazy_static = "1.4.0"
winapi = { version = "0.3", features = ["setupapi", "combaseapi", "dbt", "winbase", "winuser", "winerror", "wingdi", "winspool"] }
rusttype = "0.9"
nusb = "0.1"
rand = "0.8"
strip-ansi-escapes = "0.2"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4"  # 可选，用于更好的时间格式化
whoami = "1.4"  # 可选，用于获取用户名
toml = "0.8"    # 用于TOML文件解析
warp = "0.3"
bytes = "1.0"
ssh2 = "0.9"
windows = { version = "0.54", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
wifidirect-legacy-ap = "0.3.0"
anyhow = "1.0"